--- a/assistant_route_dialog.ui
+++ b/assistant_route_dialog.ui
@@ -2005,7 +2005,7 @@ Empierrée</string>
   <widget class="QPushButton" name="pushButtonValiderTransaction">
    <property name="geometry">
     <rect>
-     <x>269</x>
+     <x>339</x>
      <y>210</y>
      <width>171</width>
      <height>30</height>
@@ -2076,7 +2076,7 @@ Empierrée</string>
   <widget class="QPushButton" name="pushButtonUndo">
    <property name="geometry">
     <rect>
-     <x>240</x>
+     <x>310</x>
      <y>210</y>
      <width>30</width>
      <height>30</height>
@@ -2102,7 +2102,7 @@ Empierrée</string>
   <widget class="QPushButton" name="pushButtonLog">
    <property name="geometry">
     <rect>
-     <x>440</x>
+     <x>510</x>
      <y>210</y>
      <width>30</width>
      <height>30</height>
@@ -2124,7 +2124,7 @@ Empierrée</string>
   <widget class="QPushButton" name="pushButtonAide">
    <property name="geometry">
     <rect>
-     <x>470</x>
+     <x>540</x>
      <y>210</y>
      <width>30</width>
      <height>30</height>
@@ -2146,7 +2146,7 @@ Empierrée</string>
   <widget class="QPushButton" name="pushButtonZoom">
    <property name="geometry">
     <rect>
-     <x>210</x>
+     <x>171</x>
      <y>210</y>
      <width>30</width>
      <height>30</height>
@@ -2321,7 +2321,7 @@ Empierrée</string>
   <widget class="QPushButton" name="pushButtonchepluscourt">
    <property name="geometry">
     <rect>
-     <x>180</x>
+     <x>141</x>
      <y>210</y>
      <width>30</width>
      <height>30</height>
@@ -2362,7 +2362,7 @@ Empierrée</string>
    </property>
    <property name="geometry">
     <rect>
-     <x>49</x>
+     <x>10</x>
      <y>210</y>
      <width>131</width>
      <height>30</height>
@@ -2409,9 +2409,9 @@ Empierrée</string>
   <widget class="QgsColorButton" name="mColorButton">
    <property name="geometry">
     <rect>
-     <x>500</x>
+     <x>570</x>
      <y>210</y>
-     <width>101</width>
+     <width>61</width>
      <height>30</height>
     </rect>
    </property>
@@ -2476,6 +2476,32 @@ Empierrée</string>
    </property>
    <property name="orientation">
     <enum>Qt::Horizontal</enum>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="pushButtonsensNumerisation">
+   <property name="geometry">
+    <rect>
+     <x>200</x>
+     <y>210</y>
+     <width>111</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <weight>75</weight>
+     <bold>true</bold>
+    </font>
+   </property>
+   <property name="cursor">
+    <cursorShape>PointingHandCursor</cursorShape>
+   </property>
+   <property name="toolTip">
+    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-weight:600;&quot;&gt;Afficher ou masquer les sens de numérisation et les INSEE sur les tronçons&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+   </property>
+   <property name="text">
+    <string>Afficher le sens
+ de numerisation</string>
    </property>
   </widget>
  </widget>
