--- a/aproposde.ui
+++ b/aproposde.ui
@@ -92,6 +92,9 @@
      <height>411</height>
     </rect>
    </property>
+   <property name="readOnly">
+    <bool>true</bool>
+   </property>
    <property name="html">
     <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
 &lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
@@ -130,7 +133,7 @@ p, li { white-space: pre-wrap; }
      <x>120</x>
      <y>10</y>
      <width>261</width>
-     <height>51</height>
+     <height>59</height>
     </rect>
    </property>
    <layout class="QVBoxLayout" name="verticalLayout">
@@ -145,7 +148,7 @@ p, li { white-space: pre-wrap; }
        </font>
       </property>
       <property name="text">
-       <string>Suivi des versions</string>
+       <string>SUIVI DES VERSIONS</string>
       </property>
       <property name="alignment">
        <set>Qt::AlignCenter</set>
