--- a/assistant_route_dialog.ui
+++ b/assistant_route_dialog.ui
@@ -13,7 +13,7 @@
     <x>0</x>
     <y>0</y>
     <width>772</width>
-    <height>243</height>
+    <height>265</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -31,7 +31,7 @@
   <property name="maximumSize">
    <size>
     <width>772</width>
-    <height>243</height>
+    <height>300</height>
    </size>
   </property>
   <property name="baseSize">
@@ -159,7 +159,7 @@
   <widget class="QLabel" name="labelNbSelection">
    <property name="geometry">
     <rect>
-     <x>350</x>
+     <x>370</x>
      <y>220</y>
      <width>191</width>
      <height>20</height>
@@ -218,7 +218,7 @@
   <widget class="QPushButton" name="pushButtonValiderTransaction">
    <property name="geometry">
     <rect>
-     <x>360</x>
+     <x>380</x>
      <y>190</y>
      <width>171</width>
      <height>30</height>
@@ -289,7 +289,7 @@
   <widget class="QPushButton" name="pushButtonAide">
    <property name="geometry">
     <rect>
-     <x>590</x>
+     <x>610</x>
      <y>190</y>
      <width>30</width>
      <height>30</height>
@@ -311,7 +311,7 @@
   <widget class="QPushButton" name="pushButtonZoom">
    <property name="geometry">
     <rect>
-     <x>221</x>
+     <x>241</x>
      <y>190</y>
      <width>30</width>
      <height>30</height>
@@ -337,7 +337,7 @@
   <widget class="QPushButton" name="pushButtonchepluscourt">
    <property name="geometry">
     <rect>
-     <x>191</x>
+     <x>211</x>
      <y>190</y>
      <width>30</width>
      <height>30</height>
@@ -378,10 +378,10 @@
    </property>
    <property name="geometry">
     <rect>
-     <x>60</x>
+     <x>80</x>
      <y>190</y>
      <width>131</width>
-     <height>30</height>
+     <height>31</height>
     </rect>
    </property>
    <property name="sizePolicy">
@@ -425,7 +425,7 @@
   <widget class="QgsColorButton" name="mColorButton">
    <property name="geometry">
     <rect>
-     <x>620</x>
+     <x>550</x>
      <y>190</y>
      <width>61</width>
      <height>30</height>
@@ -456,7 +456,7 @@
   <widget class="Line" name="line">
    <property name="geometry">
     <rect>
-     <x>0</x>
+     <x>10</x>
      <y>170</y>
      <width>751</width>
      <height>20</height>
@@ -475,7 +475,7 @@
   <widget class="QPushButton" name="pushButtonsensNumerisation">
    <property name="geometry">
     <rect>
-     <x>250</x>
+     <x>270</x>
      <y>190</y>
      <width>111</width>
      <height>31</height>
@@ -2771,6 +2771,23 @@
      </widget>
     </item>
    </layout>
+  </widget>
+  <widget class="QPushButton" name="pushButton_warning">
+   <property name="geometry">
+    <rect>
+     <x>590</x>
+     <y>240</y>
+     <width>171</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>  Afficher l'état du modèle</string>
+   </property>
+   <property name="icon">
+    <iconset>
+     <normaloff>../(IGN)assistant-dfci/icons/warning.png</normaloff>../(IGN)assistant-dfci/icons/warning.png</iconset>
+   </property>
   </widget>
  </widget>
  <customwidgets>
